[gd_scene load_steps=2 format=3 uid="uid://cbk7pta41y2nh"]

[ext_resource type="Script" uid="uid://b4a0mbhgww6qc" path="res://screens/save_games/load_game.gd" id="1_lq0b6"]

[node name="Load Game" type="Control" node_paths=PackedStringArray("save_game_list", "load_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lq0b6")
save_game_list = NodePath("PanelContainer/CenterContainer/VBoxContainer/ScrollContainer/SaveGamesList")
load_button = NodePath("PanelContainer/CenterContainer/VBoxContainer/LoadButton")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Saved games"
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="SaveGamesList" type="ItemList" parent="PanelContainer/CenterContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true

[node name="LoadButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
disabled = true
text = "LOAD"

[connection signal="empty_clicked" from="PanelContainer/CenterContainer/VBoxContainer/ScrollContainer/SaveGamesList" to="." method="_on_empty_click"]
[connection signal="item_selected" from="PanelContainer/CenterContainer/VBoxContainer/ScrollContainer/SaveGamesList" to="." method="_on_item_selected"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/LoadButton" to="." method="_on_load_pressed"]
